force-app/main/default/objects/NI_Market_Problem__c/NI_Market_Problem__c.object-meta.xml
<CustomObject>
    <description>Salesforce.com Change Request: NICC-008718

A Market Problem is something that is urgent, pervasive, and impacted customer personas are willing to pay to have it solved.</description>
    <label>Market Problem</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Problems</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>