force-app/main/default/objects/NI_Market_Problem__c/fields/Impacted_Products__c.field-meta.xml
<CustomField>
    <fullName>Impacted_Products__c</fullName>
    <label>Impacted Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amadeus Cloud PMS</fullName>
            </value>
            <value>
                <fullName>Amadeus Hospitality Web Services (AHWS)</fullName>
            </value>
            <value>
                <fullName>CC Safeguard</fullName>
            </value>
            <value>
                <fullName>Cendyn</fullName>
            </value>
            <value>
                <fullName>Connex / Smarter Sourcing</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Daylight ASP</fullName>
            </value>
            <value>
                <fullName>Daylight MPE</fullName>
            </value>
            <value>
                <fullName>Daylight SPE</fullName>
            </value>
            <value>
                <fullName>Delphi.fdc</fullName>
            </value>
            <value>
                <fullName>Delphi.Net</fullName>
            </value>
            <value>
                <fullName>Delphi BI</fullName>
            </value>
            <value>
                <fullName>Delphi Diagrams</fullName>
            </value>
            <value>
                <fullName>Delphi Global</fullName>
            </value>
            <value>
                <fullName>Delphi Multi Property</fullName>
            </value>
            <value>
                <fullName>Delphi Single Property</fullName>
            </value>
            <value>
                <fullName>Destination Products</fullName>
            </value>
            <value>
                <fullName>Direct Book</fullName>
            </value>
            <value>
                <fullName>eLearning</fullName>
            </value>
            <value>
                <fullName>EMS Interface</fullName>
            </value>
            <value>
                <fullName>HIS Products</fullName>
            </value>
            <value>
                <fullName>HMS Interfaces</fullName>
            </value>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>HRM</fullName>
            </value>
            <value>
                <fullName>HRM - PMS</fullName>
            </value>
            <value>
                <fullName>iPlan</fullName>
            </value>
            <value>
                <fullName>I-Server (Base)</fullName>
            </value>
            <value>
                <fullName>MB Direct Book</fullName>
            </value>
            <value>
                <fullName>MeetingBroker</fullName>
            </value>
            <value>
                <fullName>MeetingBroker Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>