force-app/main/default/objects/NI_Market_Problem__c/fields/Market_Problem_Details__c.field-meta.xml
<CustomField>
    <fullName>Market_Problem_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Market Problem Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>