force-app/main/default/objects/NI_Market_Problem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unproven</fullName>
                <default>true</default>
                <label>Unproven</label>
            </value>
            <value>
                <fullName>Proven</fullName>
            </value>
            <value>
                <fullName>In Plan</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Post Release Market Validated</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>