force-app/main/default/objects/NI_Market_Problem__c/listViews/Delphi_fdc.listView-meta.xml
<ListView>
    <fullName>Delphi_fdc</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Market_Problem_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Delphi.fdc</value>
    </filters>
    <label>Delphi.fdc</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>