force-app/main/default/objects/NI_Market_Problem__c/listViews/Integrations.listView-meta.xml
<ListView>
    <fullName>Integrations</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Market_Problem_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>HMS Interfaces</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>HRM - PMS</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Other Interfaces</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>PMS Interfaces</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>RMS Interfaces</value>
    </filters>
    <label>Integrations / Interfaces</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>