force-app/main/default/objects/NI_Market_Problem__c/listViews/Karen_Mathews.listView-meta.xml
<ListView>
    <fullName>Karen_Mathews</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Market_Problem_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>iPlan</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>MeetingMatrix</value>
    </filters>
    <label>iPlan / Meeting Matrix</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>