force-app/main/default/objects/NI_Market_Problem__c/listViews/Marketing_Demand_Generation.listView-meta.xml
<ListView>
    <fullName>Marketing_Demand_Generation</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Market_Problem_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>HRM</value>
    </filters>
    <label>Marketing &amp; Demand Generation</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>