force-app/main/default/objects/NI_Market_Problem__c/listViews/PMS.listView-meta.xml
<ListView>
    <fullName>PMS</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Market_Problem_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Cloud PMS</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>On Property PMS</value>
    </filters>
    <label>PMS</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>