force-app/main/default/objects/NI_Market_Problem__c/listViews/Sales_Automation.listView-meta.xml
<ListView>
    <fullName>Sales_Automation</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
    <columns>NAME</columns>
    <columns>Market_Problem_Details__c</columns>
    <columns>Status__c</columns>
    <columns>Impacted_Products__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Cendyn</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>MeetingBroker</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>MeetingBroker Simplified User Exp (SUE)</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>Connex / Smarter Sourcing</value>
    </filters>
    <filters>
        <field>Impacted_Products__c</field>
        <operation>includes</operation>
        <value>MeetingBroker Channel</value>
    </filters>
    <label>Sales Automation</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>